<resources>
    <string name="app_name">ScienceVibeApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment_label">ThirdFragment</string>
    <string name="fourth_fragment_label">Forth Fragment</string>
    <string name="fifth_fragment_label">FifthFragment</string>
    <string name="sixth_fragment_label">SixthFragment</string>
</resources>