<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.faryz.sciencevibeapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_FifthFragment"
            app:destination="@id/FifthFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.faryz.sciencevibeapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_thirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_FourthFragment"
            app:destination="@id/FourthFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.faryz.sciencevibeapp.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third" />
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.faryz.sciencevibeapp.FourthFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth" >
        <action
            android:id="@+id/action_FourthFragment_to_SixthFragment"
            app:destination="@id/SixthFragment" />
    </fragment>
    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.faryz.sciencevibeapp.FifthFragment"
        android:label="@string/fifth_fragment_label"
        tools:layout="@layout/fragment_fifth" >
        <action
            android:id="@+id/action_FifthFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SixthFragment"
        android:name="com.faryz.sciencevibeapp.SixthFragment"
        android:label="@string/sixth_fragment_label"
        tools:layout="@layout/fragment_sixth" />
</navigation>